syntax = "proto3";

package errors;

import "errors/errors.proto";
option go_package = "./;errors";

enum ErrorReason {
  // 设置缺省错误码
  option (errors.default_code) = 500;

  ParamsError = 0[(errors.message)="参数错误"];
  DatabaseError = 1[(errors.message)="数据库错误"];
  TransformError = 2[(errors.message)="数据转换失败"];
  GetError = 3[(errors.message)="获取数据失败"];
  ListError = 4[(errors.message)="获取列表数据失败"];
  CreateError = 5[(errors.message)="创建数据失败"];
  ImportError = 6[(errors.message)="导入数据失败"];
  ExportError = 7[(errors.message)="导出数据失败"];
  UpdateError = 8[(errors.message)="更新数据失败"];
  DeleteError = 9[(errors.message)="删除数据失败"];
  GetTrashError = 10[(errors.message)="获取回收站数据失败"];
  ListTrashError = 11[(errors.message)="获取回收站列表数据失败"];
  DeleteTrashError = 12[(errors.message)="删除回收站数据失败"];
  RevertTrashError = 13[(errors.message)="还原回收站数据失败"];
}